# ConsistentDB

./: CMakeLists.txt  README.md  go.mod
cmd/kvctl/: main.go
cmd/kvnode/: main.go
include/: hash_ring.hpp
internal/controller/: server.go
internal/proto/: kv.proto
internal/ring/: ring.go
internal/storage/: store.go  store_test.go  wal.go
proto/: kv.proto
src/client/: main.cpp
src/common/: hash_ring.cpp
src/proxy/: main.cpp
src/server/: main.cpp
